# CLI-Library

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
src/terminal/: terminal.cpp  terminal.h
src/terminal/input/: globals.h
src/terminal/input/checkbox/: checkbox.cpp  checkbox.h
src/terminal/input/choice/: choice.cpp  choice.h
src/terminal/input/radio/: radio.cpp  radio.h
src/terminal/input/text_input/: input.cpp  input.h
src/terminal/systems/: systems.h  terminal.cpp  terminal_sys.cpp
src/terminal/utils/colors/: color.h
terminal/: systems.h  terminal.cpp  terminal.h
terminal/checkbox/: checkbox.cpp  checkbox.h
terminal/checkbox/choice/: choice.cpp  choice.h
terminal/input/checkbox/: checkbox.cpp  checkbox.h
terminal/input/choice/: choice.cpp  choice.h
terminal/input/radio/: radio.cpp  radio.h
terminal/systems/: systems.h  terminal.cpp
terminal/utils/: common.h
terminal/utils/colors/: color.h
